--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body background="image/nen.jpg">
 <canvas id="canvas"></canvas>
-<h1 style="text-align: center; background:deepskyblue">Weird Puzzle</h1>
-<h2 style="background: azure; text-align: center">Choose a picture to play!!</h2>
+<h1 style="text-align: center; background:deepskyblue; font-size:100px">Weird Puzzle</h1>
+<h2 style="background: azure; text-align: center; font-size: 60px">Choose a picture to play!!</h2>
     <img src="image/saber.png" onclick="pic1()">
     <img src="image/blaster blade.jpg" onclick="pic2()">
     <img src="image/blue eye.png" style="height: 450px; width: 600px" onclick="pic3()">
