--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Weird Puzzle</title>
-    <script src="index2.js"></script>
+    <script src="start.js"></script>
+    <script src="play.js"></script>
 </head>
 <body background="image/nen.jpg">
 <canvas id="canvas"></canvas>
