--- a/guide.html
+++ b/guide.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Hướng dẫn Game</title>
 </head>
-<body>
-$END$
+<body background="image/nen.jpg">
+<p style="font-size: 24px">Nhấn và di chuyển hình để ghép cho giống với hình mẫu ở dưới<br>
+    Nếu không thích hình đã chọn bạn có thể chọn hình khác bằng cách nhấn nút<br>
+Nếu bạn đã hiểu cách chơi đã hiểu cách chơi hãy nhấn nút dưới</p>
+<button><a href="play-game.html">Start the game</a></button>
 </body>
 </html>
