--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Weird Puzzle</title>
-    <script src="start.js"></script>
-    <script src="play.js"></script>
+    <a href="play-game.html">
+    <button style="position: absolute;
+                   left: 35%; top: 300px;
+                   height: 50px;width: 100px;
+                   background-color: yellow;
+                   text-align: center; font-size: 20px">
+        Start</button>
+    </a>
+
+        <a href="guide.html">
+    <button style="position: absolute;
+            right: 35%; top: 300px;
+            height: 50px;width: 100px;
+            background-color: yellow;
+            text-align: center; font-size: 20px">Hướng dẫn
+    </button>
+        </a>
 </head>
 <body background="image/nen.jpg">
-<canvas id="canvas"></canvas>
 <h1 style="text-align: center; background:deepskyblue; font-size:100px">Weird Puzzle</h1>
-<h2 style="background: azure; text-align: center; font-size: 60px">Choose a picture to play!!</h2>
-    <img src="image/saber.png" onclick="pic1()">
-    <img src="image/blaster blade.jpg" onclick="pic2()">
-    <img src="image/blue eye.png" style="height: 450px; width: 600px" onclick="pic3()">
-    <img src="image/pacifica.jpg" onclick="pic4()">
 </body>
 </html>
