--- a/play-game.html
+++ b/play-game.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Weird Puzzle</title>
+    <script src="start.js"></script>
+    <script src="play.js"></script>
 </head>
-<body>
-$END$
+<body background="image/nen.jpg">
+<canvas id="canvas"></canvas>
+<h2 style="background: azure;
+           text-align: center;
+           font-size: 60px">Choose a picture to play!!
+</h2>
+
+<a href="in-game/pic1.html">
+    <img src="image/saber.png">
+</a>
+
+    <a href="in-game/pic2.html">
+        <img src="image/blaster blade.jpg">
+    </a>
+
+        <a href="in-game/pic3.html">
+ <img src="image/blue eye.png" style="height: 450px; width: 600px">
+        </a>
+
+
+<img src="image/pacifica.jpg" onclick="pic4()">
 </body>
 </html>
